# ai-uark

./: .gitignore
HW1/Q1/: main.py
HW1/Q5/: search.py
HW1/baker_011029933/baker_011029933/Q5/src/: game.py  pacman.py  search.py
HW2/Q2/: solver.py
HW2/Q4/: commands.txt  search.py  searchAgents.py
HW2/Q4/search/: pacman.py  search.py  searchAgents.py
HW3/Q4/: Main.py  frozenlake_env.py  main.py  pyproject.toml  q_learning_agent.py
